@@ -55,7 +55,7 @@ final class HttpServerChannelListener
     @Override
     public void onBeforeDispatch(Request request)
     {
-        long requestBeginTime = (Long) request.getAttribute(REQUEST_BEGIN_ATTRIBUTE);
+        long requestBeginTime = getRequestBeginTime(request);
         request.setAttribute(REQUEST_BEGIN_TO_DISPATCH_ATTRIBUTE, System.nanoTime() - requestBeginTime);
     }
 
@@ -63,8 +63,19 @@ final class HttpServerChannelListener
     @Override
     public void onRequestEnd(Request request)
     {
-        long requestBeginTime = (Long) request.getAttribute(REQUEST_BEGIN_ATTRIBUTE);
+        long requestBeginTime = getRequestBeginTime(request);
         request.setAttribute(REQUEST_BEGIN_TO_END_ATTRIBUTE, System.nanoTime() - requestBeginTime);
+    }
+
+    private long getRequestBeginTime(Request request)
+    {
+        Object requestBeginAttribute = request.getAttribute(REQUEST_BEGIN_ATTRIBUTE);
+        if (requestBeginAttribute != null) {
+            return (long) (Long) requestBeginAttribute;
+        }
+        long currentTime = System.nanoTime();
+        request.setAttribute(REQUEST_BEGIN_ATTRIBUTE, currentTime);
+        return currentTime;
     }
 
     @Override
